--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21018,6 +21018,190 @@
 			</table>
 			<p>Le mot correspondant à <em>-ⲑⲏⲛⲟⲩ</em> boḥairique est <em>-ⲧⲏⲩⲧⲛ̄</em>: <em>ϩⲏⲧ-ⲧⲏⲩⲧⲛ̄</em> «votre cœur». </p>
 			<p>Ces pronoms s'emploient comme en boḥairique. Exemple <em>ⲉ- ⲉⲣⲟ⸗</em> «vers, à», <em>ⲛ̄ ⲛ⸗</em> «à», <em>ⲣⲁⲧ⸗</em> «pied». </p>
+			<table>
+  <tr>
+    <td>Sing.</td><td>1.</td><td><em>ⲉⲣⲟⲓ̈</em></td><td><em>ⲛⲁⲓ̈</em></td><td><em>ⲣⲁⲧ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>2 m.</td><td><em>ⲉⲣⲟⲕ</em></td><td><em>ⲛⲁⲕ</em></td><td><em>ⲣⲁⲧⲕ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>f.</td><td><em>ⲉⲣⲟ</em></td><td><em>ⲛⲉ</em></td><td><em>ⲣⲁⲧⲉ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>3 m.</td><td><em>ⲉⲣⲟϥ</em></td><td><em>ⲛⲁϥ</em></td><td><em>ⲣⲁⲧϥ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>f.</td><td><em>ⲉⲣⲟⲥ</em></td><td><em>ⲛⲁⲥ</em></td><td><em>ⲣⲁⲧⲥ</em></td>
+  </tr>
+  <tr>
+    <td>Plur.</td><td>1.</td><td><em>ⲉⲣⲟⲛ</em></td><td><em>ⲛⲁⲛ</em></td><td><em>ⲣⲁⲧⲛ̄</em></td>
+  </tr>
+  <tr>
+    <td></td><td>2.</td><td><em>ⲉⲣⲱⲧⲛ̄</em></td><td><em>ⲛⲏⲧⲛ̄</em></td><td><em>ⲣⲁⲧⲧⲏⲩⲧⲛ̄</em></td>
+  </tr>
+  <tr>
+    <td></td><td>3.</td><td><em>ⲉⲣⲟⲟⲩ</em></td><td><em>ⲛⲁⲩ</em></td><td><em>ⲣⲁⲧⲟⲩ</em></td>
+  </tr>
+</table>
+<p>Pronoms personnels absolus.</p>
+<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ⲁⲛⲟⲕ</em></td><td>1.</td><td><em>ⲁⲛⲟⲛ</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ⲛ̄ⲧⲟⲕ</em></td><td>2.</td><td><em>ⲛ̄ⲧⲱⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td><em>ⲛ̄ⲧⲟ</em></td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ⲛ̄ⲧⲟϥ</em></td><td>3.</td><td><em>ⲛ̄ⲧⲟⲟⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ⲛ̄ⲧⲟⲥ</em></td><td></td><td></td>
+	</tr>
+</table>
+	<p>Ces pronoms ont quelquefois les formes abrégées suivantes:</p>
+	<table>
+		<tr>
+			<th>Sing.</th><th></th><th>Pl.</th><th></th>
+		</tr>
+		<tr>
+			<td>1.</td><td><em>ⲁⲛⲅ̄-</em></td><td>1.</td><td><em>ⲁⲛ-</em></td>
+		</tr>
+		<tr>
+			<td>2 m.</td><td><em>ⲛ̄ⲧⲕ̄-</em></td><td>2.</td><td><em>ⲛ̄ⲧⲉⲧⲛ̄-</em></td>
+		</tr>
+		<tr>
+		<td>f.</td><td><em>ⲛ̄ⲧⲉ-</em></td><td></td><td></td>
+		</tr>
+	</table>
+	<p>Autres formes personnelles.</p>
+	<em>ϩⲱⲱ⸗</em> «aussi, même».
+	<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ϩⲱ</em>, <em>ϩⲱⲱⲧ</em></td><td>1.</td><td><em>ϩⲱⲱⲛ</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ϩⲱⲱⲕ</em></td><td>2.</td><td><em>ϩⲱⲧⲧⲏⲩⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td><em>ϩⲱⲱⲧⲉ</em></td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ϩⲱⲱϥ</em></td><td>3.</td><td><em>ϩⲱⲟⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ϩⲱⲱⲥ</em></td><td></td><td></td>
+	</tr>
+</table>
+<em>ⲙⲁⲩⲁⲁⲧ⸗</em> «seul, même».
+<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ⲙⲁⲩⲁⲁⲧ</em></td><td>1.</td><td><em>ⲙⲁⲩⲁⲁⲛ</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ⲙⲁⲩⲁⲁⲕ</em></td><td>2.</td><td><em>ⲙⲁⲩⲁⲁⲧⲧⲏⲩⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td>(<em>ⲙⲁⲩⲁⲁⲧⲉ</em>)</td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ⲙⲁⲩⲁⲁϥ</em></td><td>3.</td><td><em>ⲙⲁⲩⲁⲁⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ⲙⲁⲩⲁⲁⲥ</em></td><td></td><td></td>
+	</tr>
+</table>
+<em>ⲧⲏⲣ⸗</em> «tout».
+<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ⲧⲏⲣⲧ</em></td><td>1.</td><td><em>ⲧⲏⲣⲛ̄</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ⲧⲏⲣⲕ</em></td><td>2.</td><td><em>ⲧⲏⲣⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td>(<em>ⲧⲏⲣⲉ</em>)</td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ⲧⲏⲣϥ</em></td><td>3.</td><td><em>ⲧⲏⲣⲟⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ⲧⲏⲣⲥ</em></td><td></td><td></td>
+	</tr>
+</table>
+<em>ⲟⲩⲁⲁ⸗</em> «seul».
+<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ⲟⲩⲁⲁⲧ</em></td><td>1.</td><td><em>ⲟⲩⲁⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ⲟⲩⲁⲁⲕ</em></td><td>2.</td><td><em>ⲟⲩⲁⲁⲧⲧⲏⲩⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td>(<em>ⲟⲩⲁⲁⲧⲉ</em>)</td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ⲟⲩⲁⲁϥ</em></td><td>3.</td><td><em>ⲟⲩⲁⲧⲟⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ⲟⲩⲁⲁⲥ</em></td><td></td><td></td>
+	</tr>
+</table>
+<p>Adjectifs possessifs.</p>
+<table>
+  <tr>
+    <th></th><th></th><th>Devant un nom sing.</th><th></th><th></th><th></th><th>Devant un nom</th><th></th>
+  </tr>
+  <tr>
+    <th></th><th></th><th>masculin</th><th></th><th>féminin</th><th></th><th>pluriel</th><th></th>
+  </tr>
+  <tr>
+    <td>Sing.</td><td>1.</td><td><em>ⲡⲁ-</em></td><td>mon</td><td><em>ⲧⲁ-</em></td><td>ma</td><td><em>ⲛⲁ-</em></td><td>mes</td>
+  </tr>
+  <tr>
+    <td></td><td>2 m.</td><td><em>ⲡⲉⲕ-</em></td><td>ton</td><td><em>ⲧⲉⲕ-</em></td><td>ta</td><td><em>ⲛⲉⲕ-</em></td><td>tes</td>
+  </tr>
+  <tr>
+    <td></td><td>f.</td><td><em>ⲡⲟⲩ-</em></td><td>ton</td><td><em>ⲧⲟⲩ-</em></td><td>ta</td><td><em>ⲛⲟⲩ-</em></td><td>tes</td>
+  </tr>
+  <tr>
+    <td></td><td>3 m.</td><td><em>ⲡⲉϥ-</em></td><td>son</td><td><em>ⲧⲉϥ-</em></td><td>sa</td><td><em>ⲛⲉϥ-</em></td><td>ses</td>
+  </tr>
+  <tr>
+    <td></td><td>f.</td><td><em>ⲡⲉⲥ-</em></td><td>son</td><td><em>ⲧⲉⲥ-</em></td><td>sa</td><td><em>ⲛⲉⲥ-</em></td><td>ses</td>
+  </tr>
+  <tr>
+    <td>Plur.</td><td>1.</td><td><em>ⲡⲉⲛ-</em></td><td>notre</td><td><em>ⲧⲉⲛ-</em></td><td>notre</td><td><em>ⲛⲉⲛ-</em></td><td>nos</td>
+  </tr>
+  <tr>
+    <td></td><td>2.</td><td><em>ⲡⲉⲧⲛ̄-</em></td><td>votre</td><td><em>ⲧⲉⲧⲛ̄-</em></td><td>votre</td><td><em>ⲛⲉⲧⲛ̄-</em></td><td>vos</td>
+  </tr>
+  <tr>
+    <td></td><td>3.</td><td><em>ⲡⲉⲩ-</em></td><td>leur</td><td><em>ⲧⲉⲩ-</em></td><td>leur</td><td><em>ⲛⲉⲩ-</em></td><td>leurs</td>
+  </tr>
+</table>
+<p>Exemples:</p>
+<p><em>ⲧⲁⲥⲱⲛⲉ</em> «ma sœur»,</p>
+<p><em>ⲡⲉⲕⲥⲟⲛ</em> «ton frère»,</p>
+<p><em>ⲛⲉⲛⲉⲓⲟⲧⲉ</em> «nos pères».</p>
 		</div>
 		<div id="petit_exercise">
   <p>Petit exercice.</p>
