--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21202,6 +21202,53 @@
 <p><em>ⲧⲁⲥⲱⲛⲉ</em> «ma sœur»,</p>
 <p><em>ⲡⲉⲕⲥⲟⲛ</em> «ton frère»,</p>
 <p><em>ⲛⲉⲛⲉⲓⲟⲧⲉ</em> «nos pères».</p>
+<p>Pronoms possessifs.</p>
+<p>Forme abrégée: Sing. m. <em>ⲡⲁ-</em>, f. <em>ⲧⲁ-</em>, Pl. <em>ⲛⲁ-</em>.</p>
+<p>Forme avec suffixes:</p>
+<table>
+  <tr>
+    <td>Sing.</td><td>1.</td><td><em>ⲡⲱⲓ̈</em></td><td><em>ⲧⲱⲓ̈</em></td><td><em>ⲛⲟⲩⲓ̈</em></td>
+  </tr>
+  <tr>
+    <td></td><td>2 m.</td><td><em>ⲡⲱⲕ</em></td><td><em>ⲧⲱⲕ</em></td><td><em>ⲛⲟⲩⲕ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>f.</td><td><em>ⲡⲱ</em></td><td><em>ⲧⲱ</em></td><td><em>ⲛⲟⲩ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>3 m.</td><td><em>ⲡⲱϥ</em></td><td><em>ⲧⲱϥ</em></td><td><em>ⲛⲟⲩϥ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>f.</td><td><em>ⲡⲱⲥ</em></td><td><em>ⲧⲱⲥ</em></td><td><em>ⲛⲟⲩⲥ</em></td>
+  </tr>
+  <tr>
+    <td>Plur.</td><td>1.</td><td><em>ⲡⲱⲛ</em></td><td><em>ⲧⲱⲛ</em></td><td><em>ⲛⲟⲩⲛ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>2.</td><td><em>ⲡⲱⲧⲛ̄</em></td><td><em>ⲧⲱⲧⲛ̄</em></td><td><em>ⲛⲟⲩⲧⲛ̄</em></td>
+  </tr>
+  <tr>
+    <td></td><td>3.</td><td><em>ⲡⲱⲟⲩ</em></td><td><em>ⲧⲱⲟⲩ</em></td><td><em>ⲛⲟⲩⲟⲩ</em></td>
+  </tr>
+</table>
+<p>La syntaxe de ces mots est la même qu'en boḥairique.</p>
+<p>Adjectifs et pronoms démonstratifs.</p>
+<p>
+<p>Pour les objets rappochés.</p>
+<p>Adjectif: Sing. m. <em>ⲡⲉⲓ̈-</em>, f. <em>ⲧⲉⲓ̈-</em>, Pl. <em>ⲛⲉⲓ̈-</em>.</p>
+<p>Pronom: Sing. m. <em>ⲡⲁⲓ̈</em>, f. <em>ⲧⲁⲓ̈</em>, Pl. <em>ⲛⲁⲓ̈</em>.</p>
+<p>L'adjectif a encore une autre forme <em>ⲡⲓ- ϯ- ⲛⲓ-</em> qui est moins déterminée et s'emploie comme simple article.</p>
+<p>Exemples:</p>
+<p><em>ⲡⲉⲓ̈ⲣⲱⲙⲉ ⲡⲁⲓ̈</em> «cet homme-ci»,</p>
+<p><em>ⲧⲉⲓ̈ⲥϩⲓⲙⲉ</em> «cette femme»,</p>
+<p><em>ⲛⲉⲓ̈ⲁⲗⲟⲟⲩⲉ</em> «ces enfants».</p>
+<p>Pour les objets éloignés.</p>
+<p>Pronom : Sing. m. <em>ⲡⲏ</em>, f. <em>ⲧⲏ</em>, Pl. <em>ⲛⲏ</em>.</p>
+<p>Adjectif: comme en boḥairique, l'adjectif ne s'est pas conservé et on prend, pour l'exprimer, la même tournure: <em>ⲡⲣⲱⲙⲉ ⲉⲧⲙ̄ⲙⲁⲩ</em> «cet homme-là».
+<p>Pronom relatif.</p>
+<p>Pour tous les genres et tous les nombres: <em>ⲉ ⲉⲧ ⲛ̄ⲧ ⲉⲧⲉ</em>.
+<p>Nom.</p>
+<p>La formation des noms est à peu près la même dans les deux dialectes. On a des noms <i>dérivés</i> en <em>ⲉ</em>, en <em>ϥ</em>, en <em></em>:
 		</div>
 		<div id="petit_exercise">
   <p>Petit exercice.</p>
