--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21248,7 +21248,17 @@
 <p>Pronom relatif.</p>
 <p>Pour tous les genres et tous les nombres: <em>ⲉ ⲉⲧ ⲛ̄ⲧ ⲉⲧⲉ</em>.
 <p>Nom.</p>
-<p>La formation des noms est à peu près la même dans les deux dialectes. On a des noms <i>dérivés</i> en <em>ⲉ</em>, en <em>ϥ</em>, en <em></em>:
+<p>La formation des noms est à peu près la même dans les deux dialectes. On a des noms <i>dérivés</i> en <em>ⲉ</em>, en <em>ϥ</em>, en <em>ⲥ</em>:</p>
+<p><em>ⲧⲉϣⲉ</em>, <i>fém.</i> <em>ⲧⲉϣⲏ</em> «voisin», de <em>ⲧⲟϣ</em> «limite»;</p>
+<p><em>ⲛⲁϩⲃϥ</em> «joug», de <em>ⲛⲁϩⲃ</em> «atteler»;</p>
+<p><em>ⲥⲟⲟⲩϩⲥ</em> «réunion», de <em>ⲥⲱⲟⲩϩ</em> «réunir».</p>
+<p>Les noms <i>composés</i> admettent aussi trois sortes de préfixes, un nom, un verbe, une particule:</p>
+<p><em>ⲙⲁⲛ̄ⲥⲱⲛϩ</em> «prison», de <em>ⲙⲁ-ⲛ̄</em> «lieu de» et <em>ⲥⲱⲛϩ</em> «lier, enchaîner».</p>
+<p><em>ⲛⲁϣⲧⲙⲁⲕϩ</em> «qui a la tête dure», de <em>ⲛ̄ϣⲟⲧ</em> «être dur», et <em>ⲙⲁⲕϩ</em> «nuque».</p>
+<p><em>ⲙⲛ̄ⲧⲉⲣⲟ</em> «royauté», de <em>ⲙⲛ̄ⲧ-</em> (B. <em>ⲙⲉⲧ-</em>) signe du substantif abstrait, et <em>ⲉⲣⲟ</em> «roi».</p>
+<p>Le <i>pluriel</i> se forme d'après les mêmes règles.</p>
+<p>Verbe.</p>
+<p>Classification.</p>
 		</div>
 		<div id="petit_exercise">
   <p>Petit exercice.</p>
