--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21259,6 +21259,126 @@
 <p>Le <i>pluriel</i> se forme d'après les mêmes règles.</p>
 <p>Verbe.</p>
 <p>Classification.</p>
+<table>
+  <tr>
+    <td>I</td><td>1.</td><td><em>ⲃⲱⲗ</em></td><td><em>ⲃⲗ̄-</em></td><td><em>ⲃⲟⲗ⸗</em></td><td><em>ⲃⲏⲗ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>2.</td><td><em>ϩⲙⲟⲙ</em></td><td>—</td><td>—</td><td><em>ϩⲏⲙ</em></td>
+  </tr>
+  <tr>
+    <td>II</td><td>3.</td><td><em>ⲡⲱⲣϣ</em></td><td><em>ⲡⲣ̄ϣ-</em></td><td><em>ⲡⲟⲣϣ⸗</em></td><td><em>ⲡⲟⲣϣ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>4.</td><td><em>ⲙⲓⲥⲉ</em></td><td><em>ⲙⲉⲥ-</em></td><td><em>ⲙⲁⲥⲧ⸗</em></td><td>(<em>ⲙⲟⲥⲉ</em>)</td>
+  </tr>
+  <tr>
+    <td>III</td><td>5.</td><td><em>ϣⲟⲣϣⲣ̄</em></td><td><em>ϣⲣ̄ϣⲣ̄-</em></td><td><em>ϣⲣ̄ϣⲱⲣ⸗</em></td><td><em>ϣ̄ⲣϣⲱⲣ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>6.</td><td><em>ⲥⲕⲟⲣⲕⲣ̄</em></td><td><em>ⲥⲕⲣ̄ⲕⲣ̄-</em></td><td><em>ⲥⲕⲣ̄ⲕⲱⲣ⸗</em></td><td><em>ⲥⲕⲣ̄ⲕⲱⲣ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>7.</td><td><em>ⲥⲟⲃⲧⲉ</em></td><td><em>ⲥⲃ̄ⲧⲉ-</em></td><td><em>ⲥⲃ̄ⲧⲱⲧ⸗</em></td><td><em>ⲥⲃ̄ⲧⲱⲧ</em></td>
+  </tr>
+  <tr>
+    <td></td><td>8.</td><td><em>ⲙⲟⲥⲧⲉ</em></td><td><em>ⲙⲉⲥⲧⲉ-</em></td><td><em>ⲙⲉⲥⲧⲱ⸗</em></td><td>—</td>
+  </tr>
+</table>
+<p>Il y a beaucoup d'exceptions; on les apprendra surtout par l'usage et par le dictionnaire.</p>
+<p>Verbes causatifs formés de <em>ⲥ</em>.</p>
+<table>
+  <tr>
+    <td><em>ⲥⲃ̄ⲃⲉ</em></td><td><em>ⲥⲃ̄ⲃⲉ-</em></td><td><em>ⲥⲃ̄ⲃⲏⲧ⸗</em></td><td><em>ⲥⲃ̄ⲃⲏⲩⲧ</em></td>
+  </tr>
+  <tr>
+    <td><em>ⲥⲟⲟⲩⲧⲛ̄</em></td><td><em>ⲥⲟⲩⲧⲛ̄-</em></td><td><em>ⲥⲟⲩⲧⲱⲛ⸗</em></td><td><em>ⲥⲟⲩⲧⲱⲛ</em></td>
+  </tr>
+</table>
+<p>Causatifs formés de Verbes causatifs formés de <em>ⲧ</em>.</p>
+<table>
+  <tr>
+    <td><em>ⲧⲁⲕⲟ</em></td><td><em>ⲧⲁⲕⲉ-</em></td><td><em>ⲧⲁⲕⲟ⸗</em></td><td><em>ⲧⲁⲕⲏⲩ</em></td>
+  </tr>
+  <tr>
+    <td><em>ⲧⲥⲟ</em></td><td><em>ⲧⲥⲉ-</em></td><td><em>ⲧⲥⲟ⸗</em></td><td><em>ⲧⲥⲏⲩ</em></td>
+  </tr>
+</table>
+
+<p>Remarques et exemples.</p>
+<p>Présent.</p>
+<p>Le 2<sup>e</sup> présent correspond au 2<sup>e</sup> et au 3<sup>e</sup> présent boḥairique; il en remplit toutes les fonctions, soit dans les propositions interrogatives, soit dans l'état de dépendance:</p>
+<p><em>ⲉϥⲃⲏⲕ ⲉⲧⲱⲛ</em> «où va-t-il?»<sup class="footnote">1</sup>.</p>
+<p><em>ⲙⲛ̄-ϭⲟⲙ ⲛ̄ⲗⲁⲁⲩⲉ ⲉⲉⲓ ⲉϩⲟⲩⲛ ⲉⲡⲙⲁ ⲉⲧⲟⲩⲁⲁⲃ ⲉϥⲟ ⲛ̄ϩⲏⲧ ⲥⲛⲁⲩ</em> «personne ne peut entrer dans le lieu saint lorsqu'il a des doutes»<sup class="footnote">2</sup>.</p>
+<p>Futur.</p>
+<p>Le futur se forme en ajoutant <em>ⲛⲁ</em> au temps correspondant de l'indicatif.</p>
+<p><i>Premier futur:</i></p>
+<p><em>ϯⲛⲁⲃⲱⲗ</em> «je délierai»,</p>
+<p><em>ⲕⲛⲁⲙⲉ</em> «tu aimeras»,</p>
+<p><em>ⲥⲉⲛⲁⲣ̄ϩⲟⲧⲉ ⲁⲛ</em> «ils ne craindront pas»<sup class="footnote">3</sup>.</p>
+<p><i>Deuxième futur:</i></p>
+<p><em>ⲉⲣⲉ ⲡⲁⲓ ⲛⲁⲃⲱⲕ ⲉⲧⲱⲛ</em> «où ira-t-il?»<sup class="footnote">4</sup>.</p>
+<p>A ce temps, la 1 pl. est <em>ⲧⲛ̄ⲛⲁ</em> ou, avec contraction <em>ⲧⲛ̄ⲁ</em>; de même la 2 pl. est <em>ⲧⲉⲧⲛ̄ⲛⲁ</em> ou <em>ⲧⲉⲧⲛ̄ⲁ</em>.</p>
+<p>Le <i>futur antérieur</i> se forme également par l'addition de <em>ⲛⲁ</em> à l'imparfait de l'indicatif. Il a le même sens qu'en boḥairique:</p>
+<p><em>ⲧⲁⲓ ⲇⲉ ⲛⲉⲥⲛⲁⲙⲟⲩ</em> «elle allait mourir»<sup class="footnote">5</sup>.</p>
+<p class="footnote">1. 1 Jean 2, 11.</p>
+<p class="footnote">2. AE. 114, 3.</p>
+<p class="footnote">3. <i>Ibid.</i> 20.</p>
+<p class="footnote">4. Jean 7, 34.</p>
+<p class="footnote">5. Luc 8, 42.</p>
+<p>Parfait.</p>
+<p>Les temps du parfait se construisent comme en boḥairique.</p>
+<p><em>ⲙ̄ⲡⲁⲧⲉ-</em>, <em>ⲙ̄ⲡⲁⲧ⸗</em> «pas encore».</p>
+<p>Avec les suffixes:</p>
+<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ⲙ̄ⲡⲁϯ</em></td><td>1.</td><td><em>ⲙ̄ⲡⲁⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ⲙ̄ⲡⲁⲧⲕ̄</em></td><td>2.</td><td><em>ⲙ̄ⲡⲁⲧⲉⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td><em>ⲙ̄ⲡⲁⲧⲉ</em></td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ⲙ̄ⲡⲁⲧϥ̄</em></td><td>3.</td><td><em>ⲙ̄ⲡⲁⲧⲟⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ⲙ̄ⲡⲁⲧⲥ̄</em></td><td></td><td></td>
+	</tr>
+</table>
+<p>Devant un nom: <em>ⲙ̄ⲡⲁⲧⲉ-</em>.</p>
+<p><em>ⲙ̄ⲡⲁⲧϥ̄ⲃⲱⲗ</em> «il n'a pas encore délié»;</p>
+<p><em>ⲙ̄ⲡⲁⲧⲉ ⲡⲁⲥⲟⲛ ⲥⲱⲧⲙ̄</em> «mon frère n'a pas encore entendu».</p>
+<p>Temps final <em>ⲧⲁⲣⲉ- ⲧⲁⲣ⸗</em>.</p>
+<p>Avec les suffixes:</p>
+<table>
+	<tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	</tr>
+	<tr>
+		<td>1.</td><td><em>ⲧⲁⲣⲓ</em></td><td>1.</td><td><em>ⲧⲁⲣⲛ̄</em></td>
+	</tr>
+	<tr>
+		<td>2 m.</td><td><em>ⲧⲁⲣⲉⲕ</em></td><td>2.</td><td><em>ⲧⲁⲣⲉⲧⲛ̄</em></td>
+	</tr>
+	<tr>
+	<td>f.</td><td><em>ⲧⲁⲣⲉ</em></td><td></td><td></td>
+	</tr>
+	<tr>
+		<td>3 m.</td><td><em>ⲧⲁⲣⲉϥ</em></td><td>3.</td><td><em>ⲧⲁⲣⲟⲩ</em></td>
+	</tr>
+	<tr>
+		<td>f.</td><td><em>ⲧⲁⲣⲉⲥ</em></td><td></td><td></td>
+	</tr>
+</table>
+<p>Devant un nom: <em>ⲧⲁⲣⲉ-</em>.</p>
+<p>Ce temps exprime un futur à l'état de dépendance:</p>
+<p><em>ϫⲡⲓⲉ ⲟⲩⲥⲁⲃⲉ ⲧⲁⲣⲉϥⲙⲉⲣⲓⲧⲕ</em> «reprenez le sage, il vous aimera»<sup class="footnote">1</sup>.
+<p class="footnote">1. Pr. 9, 8.</p>
 		</div>
 		<div id="petit_exercise">
   <p>Petit exercice.</p>
