--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22255,6 +22255,15 @@
 <p>7</p>
 <p><em>ϣⲃⲏⲣ</em> «ami, compagnon», <em>ϣⲓⲛⲉ</em> «interroger», <em>ⲥⲛⲏⲩ</em> pl. de <em>ⲥⲟⲛ</em> «frère», <em>ⲉⲧⲃⲉ</em> «au sujet de», <em>ⲉⲡⲓⲑⲩⲙⲉⲓ</em> <em>ἐπιθυμεῖν</em> «désirer», <em>ⲙⲱⲅⲓⲥ</em> «de sorte que», <em>ⲛⲅ-ⲛⲁⲩ</em> subj., <em>ϭⲟⲙϭⲉⲙ</em> «palper», <em>ⲛⲧⲉ</em> subj., <em>ϩⲏⲧ</em> «cœur», <em>ⲧⲁϫⲣⲟ</em> «affermir, s'affermir», <em>ⲉϣϫⲉ</em> «si», <em>ⲛ-ⲛⲁⲩ ⲉ-ⲛⲉⲧ</em> «de voir ceux qui», <em>ⲛⲉⲧ</em> contraction de <em>ⲛⲏ ⲉⲧ</em> «ceux qui», <em>ⲧⲱⲟⲩⲛ</em> «lever, se lever», <em>ϣⲓⲛⲉ ⲛⲥⲁ</em> «demander», <em>ⲁⲓ-ⲟⲩⲱ ⲅⲁⲣ ⲉ-ϫⲱ ⲙⲙⲟⲥ</em> «j'ai déjà dit» (290, 278), <em>ⲡ-ⲱⲛⲁϩ</em> «la vie», le mot ordinaire est <em>ⲱⲛϩ</em>, <em>ⲁ</em> est une voyelle auxiliaire.</p>
 		</div>
+		<div id="bibliographie">
+			<p>Bibliographie</p>
+<p>De La Littérature Copte.</p>
+<p>I. Notions Générales.</p>
+<p><i>Autefage S. J.</i>, Les Coptes. Extrait de «La Controverse et le Contemporain». Lyon, 1885, 8, 43 pp. Remarques générales sur la langue copte p. 15–19.</p>
+<p><i>U. Benigni</i>, Bibliotheca coptica (Bessarione, V, 1900, p. 43–54, 449–475).</p>
+<p>* <i>W. E. Crum</i>, Coptic Church. (Herzog-Hauck, XII, 801). — Aperçu général sur l'Eglise copte, sa littérature, etc.</p>
+<p><i>Ad. Hebbelynck</i>, La langue copte et sa littérature. (Magasin littéraire, 1891).</p>
+		</div>
 		<div id="liste_de_textes">
 			<p>Liste des Textes.</p>
 			<p>I. Textes boḥairiques.</p>
