--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22264,6 +22264,13 @@
 <p>* <i>W. E. Crum</i>, Coptic Church. (Herzog-Hauck, XII, 801). — Aperçu général sur l'Eglise copte, sa littérature, etc.</p>
 <p><i>Ad. Hebbelynck</i>, La langue copte et sa littérature. (Magasin littéraire, 1891).</p>
 		</div>
+		<div id="chrestomathie">
+			<p>Chrestomathie.</p>
+			<p>I. Textes Bohairiques.</p>
+			<p>Histoire de Joseph<sup class="footnote">1</sup>.</p>
+			<p>(<i>Genèse XXXIX–XLV</i>).</p>
+			
+		</div>
 		<div id="liste_de_textes">
 			<p>Liste des Textes.</p>
 			<p>I. Textes boḥairiques.</p>
