--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -4338,10 +4338,10 @@
 				</p>
 				<p>De même, le mot qui est au second rang demeure le plus souvent invariable, parfois aussi il s'accorde:</p>
 				<p>
-					<em>ϩⲁⲛⲣⲱⲙⲓ ⲛ`ⲥⲁⲃⲉ</em> «des hommes prudents» <sup class="footnote">6</sup>.
+					<em>ϩⲁⲛⲣⲱⲙⲓ ⲛ̀ⲥⲁⲃⲉ</em> «des hommes prudents» <sup class="footnote">6</sup>.
 				</p>
 				<p>
-					<em>ϩⲁⲛⲥⲁⲃⲏ ⲛ`ⲥϩⲓⲙⲓ</em> «des femmes prudentes» <sup class="footnote">7</sup>.
+					<em>ϩⲁⲛⲥⲁⲃⲏ ⲛ̀ⲥϩⲓⲙⲓ</em> «des femmes prudentes» <sup class="footnote">7</sup>.
 				</p>
 				<p class="footnote">1. Jean 1, 3.</p>
 				<p class="footnote">2. Th. 128.</p>
@@ -5600,14 +5600,14 @@
 				</p>
 				<p>Dans le premier cas ces verbes ont un complément direct; dans le second cas, le complément direct devient sujet:</p>
 				<p>
-					<em>ⲁϥⲟⲩⲱⲛ ⲙ`ⲡⲓⲣⲟ</em> «il ouvrit la porte»; <em>ⲁ ⲡⲓⲣⲟ ⲟⲩⲱⲛ</em> «la porte s'ouvrit » <sup class="footnote">1</sup>.
+					<em>ⲁϥⲟⲩⲱⲛ ⲙ̀ⲡⲓⲣⲟ</em> «il ouvrit la porte»; <em>ⲁ ⲡⲓⲣⲟ ⲟⲩⲱⲛ</em> «la porte s'ouvrit » <sup class="footnote">1</sup>.
 				</p>
 				<p class="footnote">1. MS. 424.</p>
 				<p>
 					<em>ⲁϥⲑⲱⲟⲩϯ ⲙ̀ⲡⲓⲙⲱⲟⲩ</em> «il réunit l'eau»;
 				</p>
 				<p>
-					<em>ⲁϥⲑⲱⲟⲩϯ ⲛ`ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit» <sup class="footnote">1</sup>.
+					<em>ⲁϥⲑⲱⲟⲩϯ ⲛ̀ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit» <sup class="footnote">1</sup>.
 				</p>
 				<p>Dans les verbes <i>intransitifs</i>, l'infinitif indique une action qui reste dans le sujet lui-même; dans les verbes <i>qualitatifs</i>, l'action d'acquérir la qualité exprimée par la racine; </p>
 				<p>
@@ -11360,7 +11360,7 @@
 				<p>On a quelquefois employé <em>ϧⲁ</em> au lieu de <em>ϩⲁ</em> par simple confusion, semble-t-il: <em>ⲉⲓⲉ̀ⲓ̀ ϧⲁⲣⲟⲕ</em>
 					<sup class="footnote">8</sup> pour <em>ⲉⲓⲉ̀ⲓ̀ ϩⲁⲣⲟⲕ</em> «je viendrai vers toi».
 				</p>
-				<p class="footnote">1. On voit que dans ce sens <em>ϧⲉⲛ</em> ne diffère pas de <em>ⲛ`</em>. Dans un grand nombre de cas, en effet, ces deux prépositions peuvent permuter, cf. AB, p. 12–22; <i>Sphinx</i>, IX, p. 129. </p>
+				<p class="footnote">1. On voit que dans ce sens <em>ϧⲉⲛ</em> ne diffère pas de <em>ⲛ̀</em>. Dans un grand nombre de cas, en effet, ces deux prépositions peuvent permuter, cf. AB, p. 12–22; <i>Sphinx</i>, IX, p. 129. </p>
 				<p class="footnote">2. Mt. 3, 17.</p>
 				<p class="footnote">3. Ex. 15, 9.</p>
 				<p class="footnote">4. Luc 14, 24.</p>
@@ -14514,7 +14514,7 @@
 				</tr>
 				<tr>
 					<td>
-						<em>ⲙ`ⲕⲁϩ</em>
+						<em>ⲙ̀ⲕⲁϩ</em>
 					</td>
 					<td>
 						<em>—</em>
@@ -14742,7 +14742,7 @@
 				</tr>
 				<tr>
 					<td>
-						<em>ⲙ`ⲧⲟⲛ</em>
+						<em>ⲙ̀ⲧⲟⲛ</em>
 					</td>
 					<td>
 						<em>—</em>
@@ -14766,7 +14766,7 @@
 						<em>—</em>
 					</td>
 					<td>
-						<em>ⲛ`ϩⲟⲧ</em>
+						<em>ⲛ̀ϩⲟⲧ</em>
 					</td>
 					<td>croire</td>
 				</tr>
@@ -14907,7 +14907,7 @@
 				</tr>
 				<tr>
 					<td>
-						<em>ⲛ`ϣⲟⲧ</em>
+						<em>ⲛ̀ϣⲟⲧ</em>
 					</td>
 					<td>
 						<em>—</em>
@@ -21596,53 +21596,74 @@
 			<p>21. <em>Ⲟⲩⲟϩ ⲛⲁⲣⲉ ⲡϭⲟⲓⲥ ⲭⲏ ⲛⲉⲙ ⲓⲱⲥⲏⲫ ⲡⲉ. ⲛⲁϥϫⲉϣ ⲛⲁⲓ<sup class="footnote">37</sup> ⲉ̀ϩⲣⲏⲓ ⲉ̀ϫⲱϥ. ⲁϥϯ<sup class="footnote">38</sup> ⲛ̀ⲟⲩϩⲙⲟⲧ ⲛⲁϥ ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡⲓⲙ̀ⲛⲟⲩⲧ<sup class="footnote">39</sup> ⲛ̀ⲧⲉ ⲡⲓϣⲧⲉⲕⲟ.</em></p>
 			<p>22. <em>Ⲟⲩⲟϩ ⲁ̀ ⲡⲓⲙ̀ⲛⲟⲩⲧ ⲛ̀ⲧⲉ ⲡⲓϣⲧⲉⲕⲟ. ϯⲙ̀ⲡⲓⲙⲁⲛ̀ⲥⲱⲛϩ ⲉ̀ ⲧϫⲓϫ ⲛ̀ⲓⲱⲥⲏⲫ. ⲛⲉⲙ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧϩⲱⲟⲩⲓ̀ ⲉ̀ϧⲟⲩⲛ. ⲛⲏ ⲉⲧⲭⲏ ϧⲉⲛ ⲡⲓⲙⲁⲛ̀ⲥⲱⲛϩ.</em></p>
 			<p>23. <em>Ⲟⲩⲟϩ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉ̀ⲧⲟⲩⲣⲁ ⲙ̀ⲙⲱⲟⲩ ⲙ̀ⲙⲁⲩ. ⲛⲁϥⲉ̀ⲙⲓ ⲉ̀ⲣⲱⲟⲩ ⲁⲛ ⲡⲉ ⲛ̀ϫⲉ ⲡⲓⲙ̀ⲛⲟⲩⲧ ⲛ̀ⲧⲉ ⲡⲓϣⲧⲉⲕⲟ ⲉⲑⲃⲏⲧϥ. ϩⲱⲃ ⲅⲁⲣ ⲛⲓⲃⲉⲛ ⲛⲁⲩ ϧⲉⲛ ⲧϫⲓϫ ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ⲛⲁⲣⲉ ⲡϭⲟⲓⲥ ⲭⲏ ⲛⲉⲙⲁϥ ⲡⲉ. ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉ̀ϣⲁϥⲁⲓⲧⲟⲩ ϣⲁⲣⲉ ⲡϭⲟⲓⲥ ⲥⲟⲩⲧⲉⲛ ⲡⲓⲙⲱⲓⲧ<sup class="footnote">40</sup> ϧⲉⲛ ⲛⲉϥϫⲓϫ.</em></p>
-			<p class="footnote">— 1. D'après le manuscrit <i>Copte 1</i> de la Bibliothèque Nationale de Paris (14 <sup>e</sup> siècle). On a conservé exactement tous les signes graphiques du manuscrit: lettres majuscules, points, accents. Le mot <em>ϭⲟⲓⲥ</em> toujours représenté par le sigle qui est reproduit au second rang dans notre tableau des abréviations (p. 220) a été transcrit en entier. Nous donnons en note les variantes du manuscrit (copt. 1) de la Bibliothèque Vaticane (9 <sup>e</sup> siècle). Elles seront indiquées au moyen de l'abréviation Vat. Le signe + indique une addition et le signe — une omission. </p>
-			<p class="footnote">2. Vat. <em>ⲁⲣⲭⲏⲙⲁⲅⲓⲣⲟⲥ</em>. </p>
-			<p class="footnote">3. Vat. + <em>ⲉⲭⲏⲙⲓ</em>. </p>
-			<p class="footnote">— 4. Vat. — <em>ⲟⲩⲟⲛ</em>. </p>
-			<p class="footnote">— 5. Vat. <em>ⲟⲩⲟϩ ⲁϥϣⲱⲡⲓ</em>. </p>
-			<p class="footnote">— 6. Vat. + <em>ⲡⲉ</em>. </p>
-			<p class="footnote">— 7. Vat. <em>ⲥⲟⲩⲧⲱⲛ</em>. </p>
-			<p class="footnote">— 8. Vat. <em>ⲟⲩⲟϩ ϩⲱⲃ</em>. </p>
-			<p class="footnote">— 9. Vat. <em>ⲁϥⲧⲏⲓⲧⲟⲩ ϧⲉⲛ ⲛⲉⲛϫⲓϫ</em>. </p>
-			<p class="footnote">— 10. Vat. + <em>ⲟⲩⲟϩ ⲁ ⲡⲥⲙⲟⲩ ⲙ̀ⲡϭⲟⲓⲥ ϣⲱⲡⲓ ϧⲉⲛ ⲛⲉϥϩⲩⲡⲁⲣⲭⲱⲛⲧⲁ ⲧⲏⲣⲟⲩ ϧⲉⲛ ⲡⲉϥⲏⲓ ⲛⲉⲙ ϧⲉⲛ ⲧⲕⲟⲓ. ⲟⲩⲟϩ ⲁϥⲧⲁⲥⲑⲟ ⲛ̀ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲛ̀ⲧⲁϥ ⲉⲛⲉⲛϫⲓϫ ⲛ̀ⲓⲱⲥⲏⲫ</em>. </p>
-			<p class="footnote">— 11. Vat. <em>ⲡⲓⲱⲓⲕ</em>. </p>
-			<p class="footnote">— 12. Vat. <em>ⲛⲉ ⲛⲉⲥⲱϥ</em>. </p>
-			<p class="footnote">— 13. Vat. <em>ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ</em>. </p>
-			<p class="footnote">— 14. Vat. <em>ⲁⲥⲉⲛⲛⲉⲥⲃⲁⲗ</em>. </p>
-			<p class="footnote">15. Vat. <em>ⲉⲑⲃⲏⲧ</em>. </p>
-			<p class="footnote">— 16. Vat. <em>ⲡⲁⲓⲏⲓ</em>. </p>
-			<p class="footnote">— 17. Vat. <em>ⲙ̀ⲡⲉϥⲭⲁ ⲙ̀ⲙⲟⲛ</em>. </p>
-			<p class="footnote">18. Vat. <em>ⲟⲩⲟϩ ⲡⲱⲥ</em>. </p>
-			<p class="footnote">— 19. Vat. — <em>ⲟⲩⲟϩ</em>. </p>
-			<p class="footnote">— 20. Vat. + <em>ⲇⲉ</em>. </p>
-			<p class="footnote">— 21. Vat. <em>ⲟⲩⲟϩ ⲙ̀ⲡⲉϥⲥⲱⲧⲉⲙ</em>. </p>
-			<p class="footnote">— 22. Vat. <em>ⲉⲣⲛⲉϥϩⲃⲏⲟⲩⲓ</em>. </p>
-			<p class="footnote">— 23. Vat. <em>ⲛ̀ϧⲟⲩⲛ</em>. </p>
-			<p class="footnote">— 24. Vat. <em>ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ</em>. </p>
-			<p class="footnote">— 25. Vat. <em>ⲟⲩⲟϩ ⲁϥⲓ</em>. </p>
-			<p class="footnote">— 26. Vat. <em>ⲟⲩⲟϩ ⲡⲉϫⲁⲥ</em>. </p>
-			<p class="footnote">27. Vat. — <em>ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ</em>. </p>
-			<p class="footnote">— 28. Vat. + <em>ⲟⲩⲟϩ</em>. </p>
-			<p class="footnote">— 29. Vat. <em>ⲛⲓϩⲃⲱⲥ</em>. </p>
-			<p class="footnote">— 30. Vat. — <em>ⲉⲡⲉϥⲏⲓ</em>. </p>
-			<p class="footnote">— 31. Vat. <em>ⲟⲩⲟϩ ⲁⲥⲥⲁϫⲓ</em>. </p>
-			<p class="footnote">— 32. Vat. <em>ⲙ̀ⲙⲟⲓ</em>. </p>
-			<p class="footnote">— 33. Vat. + <em>ⲟⲩⲟϩ</em>. </p>
-			<p class="footnote">— 34. Vat. <em>ⲉⲧⲁⲥⲥⲁϫⲓ</em>. </p>
-			<p class="footnote">— 35. Vat. <em>ⲡϣⲧⲉⲕⲟ</em>. </p>
-			<p class="footnote">— 36. Vat. <em>ⲡϣⲧⲉⲕⲟ</em>. </p>
-			<p class="footnote">37. Vat. <em>ⲟⲩⲟϩ ⲛⲁϥϫⲉϣⲛⲁⲓ</em>. </p>
-			<p class="footnote">— 38. Vat. <em>ⲟⲩⲟϩ ⲁϥϯ</em>. </p>
-			<p class="footnote">— 39. Vat. <em>ⲡⲓⲉⲙⲛⲟⲩⲧ</em>. </p>
-			<p class="footnote">— 40. Vat. <em>ⲡⲉϥⲙⲱⲓⲧ</em>. </p>
+			<p class="footnote">— 1. D'après le manuscrit <i>Copte 1</i> de la Bibliothèque Nationale de Paris (14 <sup>e</sup> siècle). On a conservé exactement tous les signes graphiques du manuscrit: lettres majuscules, points, accents. Le mot <em>ϭⲟⲓⲥ</em> toujours représenté par le sigle qui est reproduit au second rang dans notre tableau des abréviations (p. 220) a été transcrit en entier. Nous donnons en note les variantes du manuscrit (copt. 1) de la Bibliothèque Vaticane (9 <sup>e</sup> siècle). Elles seront indiquées au moyen de l'abréviation Vat. Le signe + indique une addition et le signe — une omission.</p>
+			<p class="footnote">2. Vat. <em>ⲁⲣⲭⲏⲙⲁⲅⲓⲣⲟⲥ</em>.</p>
+			<p class="footnote">3. Vat. + <em>ⲉⲭⲏⲙⲓ</em>.</p>
+			<p class="footnote">— 4. Vat. — <em>ⲟⲩⲟⲛ</em>.</p>
+			<p class="footnote">— 5. Vat. <em>ⲟⲩⲟϩ ⲁϥϣⲱⲡⲓ</em>.</p>
+			<p class="footnote">— 6. Vat. + <em>ⲡⲉ</em>.</p>
+			<p class="footnote">— 7. Vat. <em>ⲥⲟⲩⲧⲱⲛ</em>.</p>
+			<p class="footnote">— 8. Vat. <em>ⲟⲩⲟϩ ϩⲱⲃ</em>.</p>
+			<p class="footnote">— 9. Vat. <em>ⲁϥⲧⲏⲓⲧⲟⲩ ϧⲉⲛ ⲛⲉⲛϫⲓϫ</em>.</p>
+			<p class="footnote">— 10. Vat. + <em>ⲟⲩⲟϩ ⲁ ⲡⲥⲙⲟⲩ ⲙ̀ⲡϭⲟⲓⲥ ϣⲱⲡⲓ ϧⲉⲛ ⲛⲉϥϩⲩⲡⲁⲣⲭⲱⲛⲧⲁ ⲧⲏⲣⲟⲩ ϧⲉⲛ ⲡⲉϥⲏⲓ ⲛⲉⲙ ϧⲉⲛ ⲧⲕⲟⲓ. ⲟⲩⲟϩ ⲁϥⲧⲁⲥⲑⲟ ⲛ̀ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲛ̀ⲧⲁϥ ⲉⲛⲉⲛϫⲓϫ ⲛ̀ⲓⲱⲥⲏⲫ</em>.</p>
+			<p class="footnote">— 11. Vat. <em>ⲡⲓⲱⲓⲕ</em>.</p>
+			<p class="footnote">— 12. Vat. <em>ⲛⲉ ⲛⲉⲥⲱϥ</em>.</p>
+			<p class="footnote">— 13. Vat. <em>ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ</em>.</p>
+			<p class="footnote">— 14. Vat. <em>ⲁⲥⲉⲛⲛⲉⲥⲃⲁⲗ</em>.</p>
+			<p class="footnote">15. Vat. <em>ⲉⲑⲃⲏⲧ</em>.</p>
+			<p class="footnote">— 16. Vat. <em>ⲡⲁⲓⲏⲓ</em>.</p>
+			<p class="footnote">— 17. Vat. <em>ⲙ̀ⲡⲉϥⲭⲁ ⲙ̀ⲙⲟⲛ</em>.</p>
+			<p class="footnote">18. Vat. <em>ⲟⲩⲟϩ ⲡⲱⲥ</em>.</p>
+			<p class="footnote">— 19. Vat. — <em>ⲟⲩⲟϩ</em>.</p>
+			<p class="footnote">— 20. Vat. + <em>ⲇⲉ</em>.</p>
+			<p class="footnote">— 21. Vat. <em>ⲟⲩⲟϩ ⲙ̀ⲡⲉϥⲥⲱⲧⲉⲙ</em>.</p>
+			<p class="footnote">— 22. Vat. <em>ⲉⲣⲛⲉϥϩⲃⲏⲟⲩⲓ</em>.</p>
+			<p class="footnote">— 23. Vat. <em>ⲛ̀ϧⲟⲩⲛ</em>.</p>
+			<p class="footnote">— 24. Vat. <em>ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ</em>.</p>
+			<p class="footnote">— 25. Vat. <em>ⲟⲩⲟϩ ⲁϥⲓ</em>.</p>
+			<p class="footnote">— 26. Vat. <em>ⲟⲩⲟϩ ⲡⲉϫⲁⲥ</em>.</p>
+			<p class="footnote">27. Vat. — <em>ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ</em>.</p>
+			<p class="footnote">— 28. Vat. + <em>ⲟⲩⲟϩ</em>.</p>
+			<p class="footnote">— 29. Vat. <em>ⲛⲓϩⲃⲱⲥ</em>.</p>
+			<p class="footnote">— 30. Vat. — <em>ⲉⲡⲉϥⲏⲓ</em>.</p>
+			<p class="footnote">— 31. Vat. <em>ⲟⲩⲟϩ ⲁⲥⲥⲁϫⲓ</em>.</p>
+			<p class="footnote">— 32. Vat. <em>ⲙ̀ⲙⲟⲓ</em>.</p>
+			<p class="footnote">— 33. Vat. + <em>ⲟⲩⲟϩ</em>.</p>
+			<p class="footnote">— 34. Vat. <em>ⲉⲧⲁⲥⲥⲁϫⲓ</em>.</p>
+			<p class="footnote">— 35. Vat. <em>ⲡϣⲧⲉⲕⲟ</em>.</p>
+			<p class="footnote">— 36. Vat. <em>ⲡϣⲧⲉⲕⲟ</em>.</p>
+			<p class="footnote">37. Vat. <em>ⲟⲩⲟϩ ⲛⲁϥϫⲉϣⲛⲁⲓ</em>.</p>
+			<p class="footnote">— 38. Vat. <em>ⲟⲩⲟϩ ⲁϥϯ</em>.</p>
+			<p class="footnote">— 39. Vat. <em>ⲡⲓⲉⲙⲛⲟⲩⲧ</em>.</p>
+			<p class="footnote">— 40. Vat. <em>ⲡⲉϥⲙⲱⲓⲧ</em>.</p>
 			<p>XL.</p>
+			<p>1. <em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓⲥⲁϫⲓ. ⲁϥⲉⲣⲛⲟⲃⲓ ⲛ̀ϫⲉ ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲛ̀ⲭⲏⲙⲓ. ⲛⲉⲙ ⲡⲓⲁⲙⲣⲉ<sup class="footnote">1</sup> ⲉ̀ ⲡⲟⲩϭⲟⲓⲥ ⲡⲟⲩⲣⲟ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>2. <em>Ⲟⲩⲟϩ ⲁϥϫⲱⲛⲧ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ̀ ⲉ̀ⲛⲓⲥⲓⲟⲩⲣⲃ̅. ⲉ̀<sup class="footnote">2</sup> ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ ⲛⲉⲙ ⲡⲓⲁⲙⲣⲉ<sup class="footnote">1</sup>.</em></p>
+			<p>3. <em>Ⲟⲩⲟϩ ⲁϥⲭⲁⲩ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ ϧⲁⲧⲉⲛ ⲡⲓⲁⲣⲭⲓⲙⲁⲅⲓⲣⲟⲥ ϧⲉⲛ ⲡⲓⲙⲁⲛ̀ⲥⲱⲛϩ ⲡⲓⲙⲁ ⲉⲧⲁⲩⲉⲗ ⲓⲱⲥⲏⲫ ⲉ̀ⲣⲟϥ.</em></p>
+			<p>4. <em>Ⲟⲩⲟϩ ⲁ̀ ⲡⲓⲙ̀ⲛⲟⲩⲧ ⲧⲁϩⲱⲟⲩ. ⲛⲉⲙ ⲓⲱⲥⲏⲫ. ⲁϥⲧⲏⲓⲧⲟⲩ<sup class="footnote">3</sup> ⲉ̀ⲧⲟⲧϥ. ⲛⲁϥϯ ⲛ̀ϩⲑⲏϥ ⲉⲣⲱⲟⲩ. ⲟⲩⲟϩ ⲛⲁϥⲟϩⲓ ⲟⲩⲃⲏⲟⲩ<sup class="footnote">4</sup>. ⲛⲁⲩⲭⲏ ⲇⲉ ⲡⲉ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ ⲛ̀ϩⲁⲛⲉϩⲟⲟⲩ.</em></p>
+			<p>5. <em>Ⲟⲩⲟϩ ⲁⲩⲛⲁⲩ ⲙ̀ⲡⲥⲛⲁⲩ<sup class="footnote">5</sup> ⲉ̀ⲟⲩⲣⲁⲥⲟⲩⲓ̀ ϧⲉⲛ ⲟⲩⲉϫⲱⲣϩ ⲛ̀ⲟⲩⲱⲧ ϯϩⲟⲣⲁⲥⲓⲥ ⲛ̀ⲧⲉ ⲧⲟⲩⲣⲁⲥⲟⲩⲓ̀<sup class="footnote">6</sup>. ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ ⲛⲉⲙ ⲡⲓⲁⲙⲣⲉ<sup class="footnote">1</sup> ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲛ̀ⲭⲏⲙⲓ. ⲛⲏ ⲉ̀ⲛⲁⲩⲭⲏ ϧⲉⲛ ⲡⲓⲙⲁⲛ̀ⲥⲱⲛϩ.</em></p>
+			<p>6. <em>ⲁϥⲓ̀ ⲇⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲉ̀ϧⲟⲩⲛ ϩⲁⲣⲱⲟⲩ ⲛ̀ⲧⲟⲟⲩⲓ̀. ⲁϥⲛⲁⲩ ⲉ̀ⲣⲱⲟⲩ ⲉⲩϣⲑⲉⲣⲑⲱⲣ<sup class="footnote">7</sup>.</em></p>
+			<p>7. <em>Ⲟⲩⲟϩ ⲛⲁϥϣⲱⲡⲓ ⲛ̀ⲛⲓⲥⲓⲟⲩⲣ ⲛ̀ⲧⲉ ⲫⲁⲣⲁⲱ̀ ⲛⲏ ⲉ̀ ⲛⲁⲩⲛⲉⲙⲁϥ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ. ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲡⲟⲩϭⲟⲓⲥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲡⲉⲧⲉⲛϩⲟ. ⲟⲕⲉⲙ ⲙ̀ⲫⲟⲟⲩ.</em></p>
+			<p>8. <em>ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ⲛⲁϥ. ϫⲉ ⲟⲩⲣⲁⲥⲟⲩⲓ̀ ⲁⲛⲛⲁⲩ ⲉ̀ⲣⲟⲥ. ⲟⲩⲟϩ ϥϣⲟⲡ<sup class="footnote">8</sup> ⲁⲛ ⲛ̀ϫⲉ ⲫⲏ ⲉⲧⲛⲁⲃⲟⲗⲥ<sup class="footnote">9</sup>. ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲇⲉ ⲛⲱⲟⲩ. ϫⲉ ⲙⲏ ⲁ̀ⲣⲉ ⲡⲟⲩⲃⲱⲗ ϣⲟⲡ ⲁⲛ ⲉ̀ⲃⲟⲗ ϩⲓⲧⲉⲛ ⲫϯ. ⲥⲁϫⲓ ⲟⲩⲛ ϧⲁⲧⲟⲧ.</em></p>
+			<p>9. <em>Ⲟⲩⲟϩ ⲁ̀ ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ. ϫⲉ ⲧⲉϥⲣⲁⲥⲟⲩⲓ̀ ⲛ̀ⲓⲱⲥⲏⲫ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ϫⲉ ⲛ̀ϩⲣⲏⲓ<sup class="footnote">10</sup> ϧⲉⲛ ⲧⲁⲣⲁⲥⲟⲩⲓ̀. ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲃⲱ ⲛ̀ⲁⲗⲟⲗⲓ ⲭⲏ ⲙ̀ⲡⲁⲙ̀ⲑⲟ ⲡⲉ.</em></p>
+			<p>10. <em>ⲛ̀ϩⲣⲏⲓ<sup class="footnote">10</sup> ϧⲉⲛ ϯⲃⲱ ⲛ̀ⲁ̀ⲗⲟⲗⲓ ⲛⲁⲣⲉ<sup class="footnote">11</sup> ⲟⲩⲟⲛ ⲅ̅ ⲛ̀ⲭⲁϥ ⲡⲉ. Ⲟⲩⲟϩ ⲑⲁⲓ ⲛⲁⲥⲫⲟⲣⲓ ⲉ̀ⲃⲟⲗ ⲡⲉ. ⲉ̀<sup class="footnote">12</sup> ⲁⲥⲉⲛ ϩⲁⲛⲥⲙⲁϩ ⲉ̀ⲃⲟⲗ ⲉⲩⲫⲉϩ ⲛ̀ϫⲉ ⲛⲓⲥⲙⲁϩ ⲛ̀ⲁ̀ⲗⲟⲗⲓ.</em></p>
+			<p>11. <em>Ⲟⲩⲟϩ ⲛⲁⲣⲉ ⲡⲓⲁ̀ⲫⲟⲧ ⲛ̀ⲧⲉ ⲫⲁⲣⲁⲱ<sup class="footnote">13</sup>. ⲭⲏ ϧⲉⲛ ⲧⲁϫⲓϫ. ⲁⲓϭⲓ<sup class="footnote">14</sup> ⲛ̀ⲛⲓⲁ̀ⲗⲟⲗⲓ̀. ⲁⲓⲟ̀ϥⲟⲩ ⲉ̀ϧⲣⲏⲓ ⲉ̀ⲡⲓⲁⲫⲟⲧ ϧⲉⲛ ⲧϫⲓϫ<sup class="footnote">15</sup> ⲙ̀ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>12. <em>Ⲟⲩⲟϩ<sup class="footnote">16</sup> ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲛⲁϥ. ϫⲉ ⲫⲁⲓ ⲡⲉ ⲡⲉⲥⲃⲱⲗ. ⲡⲓⲅ̅ ⲛ̀ⲭⲁϥ. ⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲛⲉ ⲉ̀ⲧⲓ ⲕⲉ ⲅ̅ ⲛ̀ⲉ̀ϩⲟⲟⲩ.</em></p>
+			<p>13. <em>ⲫⲁⲣⲁⲱ̀ ⲛⲁⲉⲣⲫⲙⲉⲩⲓ<sup class="footnote">17</sup> ⲛ̀ⲧⲉⲕⲁⲣⲭⲏ. Ⲟⲩⲟϩ ϥⲛⲁⲭⲁⲕ<sup class="footnote">18</sup> ⲉ̀ϩⲣⲏⲓ<sup class="footnote">19</sup> ⲉ̀ϫⲉⲛ ⲧⲉⲕⲙⲉⲧⲣⲉϥⲟⲩⲱⲧϩ. Ⲟⲩⲟϩ ⲉ̀ⲕⲉϯ ⲙ̀ⲡⲓⲁ̀ⲫⲟⲧ ⲛ̀ⲧⲉ ⲫⲁⲣⲁⲱ̀ ⲉ̀ϧⲣⲏⲓ ⲉ̀ⲛⲉϥϫⲓϫ. ⲕⲁⲧⲁ ⲧⲉⲕⲁⲣⲭⲏ ⲛ̀ⲧⲉ ϣⲟⲣⲡ ⲙ̀ⲡⲓⲣⲏϯ ⲉ̀ⲛⲁⲕⲟⲓ ⲛ̀ⲣⲉϥⲟⲩⲱⲧϩ.</em></p>
+			<p>14. <em>Ⲁⲗⲗⲁ ⲁ̀ⲣⲓⲡⲁⲙⲉⲩⲓ̀ ⲉ̀ⲃⲟⲗ ϩⲓⲧⲟⲧⲕ. ⲉϣⲱⲡ ⲁ̀ⲣⲉϣⲁⲛ ⲡⲓⲡⲉⲑⲛⲁⲛⲉϥ<sup class="footnote">20</sup> ϫⲉⲙⲕ. ⲟⲩⲟϩ ⲉ̀ⲕⲉⲓ̀ⲣⲓ ⲛ̀ϧⲏⲧ<sup class="footnote">21</sup> ⲛ̀ⲟⲩⲛⲁⲓ. ⲟⲩⲟϩ ⲉⲕⲉ̀ⲉⲣⲫⲙⲉⲩⲓ̀ ⲉⲑⲃⲏⲧ<sup class="footnote">22</sup>. ⲛⲁϩⲣⲉⲛ ⲫⲁⲣⲁⲱ̀. ⲉⲕⲉ̀ⲉⲛⲧ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲁⲓϣⲧⲉⲕⲟ.</em></p>
+			<p>15. <em>Ϫⲉ ϧⲉⲛ ⲟⲩϭⲓⲟⲩⲓ̀ ⲁⲩⲟⲗⲧ ⲛ̀ϭⲓⲟⲩⲓ ⲉⲃⲟⲗ<sup class="footnote">23</sup> ⲡⲕⲁϩⲓ ⲛ̀ⲧⲉ ⲛⲓϩⲉⲃⲣⲉⲟⲥ. ⲟⲩⲟϩ ϧⲉⲛ ⲡⲁⲓⲙⲁ<sup class="footnote">24</sup> ⲟⲛ ⲙ̀ⲡⲓⲉⲣϩⲗⲓ ⲛ̀ⲛⲟⲃⲓ. ⲁⲗⲗⲁ ⲁⲩϩⲓⲧ<sup class="footnote">25</sup> ⲉ̀ϧⲣⲏⲓ ⲉ̀ ⲡⲁⲓⲗⲁⲕⲕⲟⲥ<sup class="footnote">26</sup>.</em></p>
+			<p>16. <em>Ⲟⲩⲟϩ ⲉ̀ⲧⲁϥⲛⲁⲩ<sup class="footnote">27</sup> ⲛ̀ϫⲉ ⲡⲓⲁⲙⲣⲉ<sup class="footnote">28</sup>. ϫⲉ ⲁϥⲃⲱⲗ ϧⲉⲛ ⲟⲩⲥⲱⲟⲩⲧⲉⲛ. ⲡⲉϫⲁϥ ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ⲁ̀ⲛⲟⲕ ϩⲱ ⲁⲓⲛⲁⲩ ⲉ̀ ⲟⲩⲣⲁⲥⲟⲩⲓ̀. ⲁⲓⲛⲁⲩ ⲓⲥϫⲉⲕ ⲛⲁⲓϥⲁⲓ ⲛ̀ⲅ̅ ⲛ̀ⲕⲁⲛⲟⲩⲛ. ⲛ̀ⲭⲟⲛⲇⲣⲓⲧⲏⲥ<sup class="footnote">29</sup> ϩⲓϫⲉⲛ ⲧⲁⲁ̀ⲫⲉ.</em></p>
+			<p>17. <em>ⲛ̀ϩⲣⲏⲓ<sup class="footnote">30</sup> ⲇⲉ ϧⲉⲛ ⲡⲓⲕⲁⲛⲟⲩⲛ ⲉⲧⲥⲁⲡϣⲱⲓ ⲛⲉ ⲟⲩⲟⲛ ⲛ̀ϧⲏⲧϥ ⲡⲉ. ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲛⲏ ⲧⲏⲣⲟⲩ ⲉ̀ϣⲁⲣⲉ ⲡⲟⲩⲣⲟ ⲫⲁⲣⲁⲱ̀. ⲟⲩⲟⲙⲟⲩ ⲛ̀ϩⲱⲃ ⲛ̀ⲁⲙⲣⲉ<sup class="footnote">28</sup>. ⲛⲁⲣⲉ<sup class="footnote">31</sup> ⲛⲓϩⲁⲗⲁϯ ⲟⲩⲱⲙ ⲙ̀ⲙⲱⲟⲩ ⲡⲉ. ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲓⲕⲁⲛⲟⲩⲛ ⲉⲧⲭⲏ ϩⲓϫⲉⲛ ⲧⲁⲁ̀ⲫⲉ.</em></p>
+			<p>18. <em>Ⲁϥⲉ̀ⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲫⲁⲓ ⲡⲉ ⲡⲉⲥⲃⲱⲗ. ⲡⲓⲅ̅ ⲛ̀ⲕⲁⲛⲟⲩⲛ ⲅ̅ ⲛ̀ⲉ̀ϩⲟⲟⲩ ⲛⲉ.</em></p>
+			<p>19. <em>Ⲉⲧⲓ ⲕⲉ ⲅ̅ ⲛ̀ⲉ̀ϩⲟⲟⲩ. ⲉ̀ⲣⲉ<sup class="footnote">32</sup> ⲫⲁⲣⲁⲱ̀ ⲱ̀ⲗⲓ ⲛ̀ⲧⲉⲕⲁ̀ⲫⲉ<sup class="footnote">33</sup> ⲉⲃⲟⲗ ⲙ̀ⲙⲟⲕ. ⲉϥⲉ̀ⲁϣⲕ<sup class="footnote">34</sup> ⲉ̀ϫⲉⲛ ⲟⲩϣⲉ. ⲉⲩⲉ̀ⲟⲩⲱⲙ<sup class="footnote">35</sup> ⲛ̀ϫⲉ ⲛⲓϩⲁⲗⲁϯ ⲛ̀ⲧⲉ ⲧⲫⲉ ⲛ̀ⲛⲉⲕⲁ̀ϥⲟⲩⲓ̀ ⲉ̀ⲃⲟⲗ ⲙ̀ⲙⲟⲕ.</em></p>
+			<p>20. <em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ϧⲉⲛ ⲡⲓⲉ̀ϩⲟⲟⲩ ⲙ̀ⲙⲁϩⲅ̅ ⲛⲉ. ⲡⲉϩⲟⲟⲩ ⲙ̀ⲙⲓⲥⲓ ⲙ̀ⲫⲁⲣⲁⲱ̀ ⲡⲉ. ⲟⲩⲟϩ ⲁϥⲓ̀ⲣⲓ ⲛ̀ⲟⲩⲥⲱ ⲉ̀ⲛⲉϥⲁ̀ⲗⲱⲟⲩⲓ̀ ⲧⲏⲣⲟⲩ ⲁϥⲉⲣⲫⲙⲉⲩⲓ̀<sup class="footnote">36</sup> ⲛ̀ϯⲁⲣⲭⲏ ⲛ̀ⲧⲉ ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ. ⲛⲉⲙ ϯⲁⲣⲭⲏ ⲛ̀ⲧⲉ ⲡⲓⲁⲙⲣⲉ<sup class="footnote">28</sup> ϧⲉⲛ ⲑⲙⲏϯ ⲛ̀ⲛⲉϥⲁ̀ⲗⲱⲟⲩⲓ̀.</em></p>
+			<p>21. <em>Ⲟⲩⲟϩ ⲁϥⲧⲁϩⲟ ⲙ̀ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ<sup class="footnote">37</sup> ⲉ̀ϫⲉⲛ ⲧⲉϥⲁⲣⲭⲏ. ⲁϥϯ<sup class="footnote">38</sup> ⲙ̀ⲡⲓⲁ̀ⲫⲟⲧ ⲉ̀ⲧϫⲓϫ ⲙ̀ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>22. <em>ⲡⲓⲁⲙⲣⲉ<sup class="footnote">39</sup> ⲇⲉ ⲁϥⲁϣϥ. ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲁϥⲃⲱⲗ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ.</em></p>
+			<p>23. <em>ⲙ̀ⲡⲉϥⲉⲣⲫⲙⲉⲩⲓ̀ ⲇⲉ ⲛ̀ⲓⲱⲥⲏⲫ ⲛ̀ϫⲉ ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ. ⲁⲗⲗⲁ ⲁϥⲉⲣⲡⲱⲃϣ.</em></p>
 			<p class="footnote">— 1. Vat. <em>ⲁⲙⲃⲣⲉ</em>. </p>
 			<p class="footnote">— 2. Vat. — <em>ⲉ</em>. </p>
 			<p class="footnote">— 3. Vat. <em>ⲟⲩⲟϩ ⲁϥⲧⲏⲓⲧⲟⲩ</em>. </p>
-			<p class="footnote">4. Vat. — <i>depuis</i>
-				<em>ⲛⲁϥϯ</em>. Ce passage avait également été omis dans la traduction arabe du ms. de Paris.
-			</p>
+			<p class="footnote">4. Vat. — <i>depuis</i> <em>ⲛⲁϥϯ</em>. Ce passage avait également été omis dans la traduction arabe du ms. de Paris.</p>
 			<p class="footnote">— 5. Vat. <em>ⲁⲩⲛⲁⲩ ⲉⲟⲩⲣⲁⲥⲟⲩⲓ ⲙ̀ⲡⲃ̅ ⲫⲟⲩⲁⲓ ⲫⲟⲩⲁⲓ ⲁϥⲛⲁⲩ ⲉⲧⲉϥⲣⲁⲥⲟⲩⲓ</em>. </p>
 			<p class="footnote">— 6. Vat. <em>ⲧⲉϥⲣⲁⲥⲟⲩⲓ</em>. </p>
 			<p class="footnote">— 7. Vat. <em>ⲉⲩϣⲧⲉⲣⲑⲱⲣ</em>. </p>
